@@ -2,4 +2,4 @@
 # Based on NiLearn package
 # License: simplified BSD
 
-__version__ = '0.3.0'  # pragma: no cover
+__version__ = '0.3.1'  # pragma: no cover
