@@ -47,4 +47,5 @@ v<0.3.0>, <03/19/2023> -- Updated clf thresholder
 v<0.3.0>, <03/20/2023> -- Added GNBM model to meta
 v<0.3.1>, <04/13/2023> -- Added pre-commit and formatted
 v<0.3.1>, <04/27/2023> -- Added grp and srp methods to decomp
-v<0.3.1>, <04/27/2023> -- Python 3.11 support
+v<0.3.1>, <05/02/2023> -- Python 3.11
+v<0.3.1>, <05/03/2023> -- Removed ALL thresholder
